Fix for STB-58.