@@ -29,9 +29,10 @@
 package it.tidalwave.role.ui.javafx.impl.combobox;
 
 import javax.annotation.Nonnull;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.Executor;
+import it.tidalwave.role.ui.UserAction;
 import javafx.util.Callback;
 import javafx.collections.ObservableList;
 import javafx.beans.value.ChangeListener;
@@ -39,12 +40,9 @@ import javafx.beans.property.ReadOnlyObjectProperty;
 import javafx.scene.control.ListCell;
 import javafx.scene.control.ListView;
 import javafx.scene.control.ComboBox;
-import javafx.scene.input.KeyEvent;
 import javafx.event.ActionEvent;
 import javafx.event.EventHandler;
 import javafx.application.Platform;
-import it.tidalwave.util.AsException;
-import it.tidalwave.util.NotFoundException;
 import it.tidalwave.role.SimpleComposite;
 import it.tidalwave.role.ui.PresentationModel;
 import it.tidalwave.role.ui.UserActionProvider;
@@ -53,6 +51,7 @@ import it.tidalwave.role.ui.javafx.impl.common.DelegateSupport;
 import it.tidalwave.role.ui.javafx.impl.common.AsObjectListCell;
 import it.tidalwave.role.ui.javafx.impl.common.ChangeListenerSelectableAdapter;
 import lombok.extern.slf4j.Slf4j;
+import static it.tidalwave.role.ui.UserActionProvider._UserActionProvider_;
 import static javafx.collections.FXCollections.observableArrayList;
 import static javafx.scene.input.KeyCode.*;
 import static it.tidalwave.role.SimpleComposite._SimpleComposite_;
@@ -74,21 +73,16 @@ public class ComboBoxBindings extends DelegateSupport
 
     /*******************************************************************************************************************
      *
-     *
+     * Event handler that executes the default action bound to the given combobox item.
      *
      ******************************************************************************************************************/
     private final EventHandler<ActionEvent> eventHandler = event ->
       {
-        try
-          {
-            final ComboBox<PresentationModel> comboBox = (ComboBox<PresentationModel>)event.getSource();
-            final PresentationModel selectedPm = comboBox.getSelectionModel().getSelectedItem();
-            selectedPm.as(UserActionProvider.class).getDefaultAction().actionPerformed();
-          }
-        catch (AsException | NotFoundException e)
-          {
-            // ok no action
-          }
+        final ComboBox<PresentationModel> comboBox = (ComboBox<PresentationModel>)event.getSource();
+        final PresentationModel selectedPm = comboBox.getSelectionModel().getSelectedItem();
+        selectedPm.maybeAs(_UserActionProvider_)
+                  .flatMap(UserActionProvider::getOptionalDefaultAction)
+                  .ifPresent(UserAction::actionPerformed);
       };
 
     /*******************************************************************************************************************
@@ -96,7 +90,7 @@ public class ComboBoxBindings extends DelegateSupport
      *
      *
      ******************************************************************************************************************/
-    public ComboBoxBindings (final @Nonnull Executor executor, final @Nonnull CellBinder cellBinder)
+    public ComboBoxBindings (@Nonnull final Executor executor, @Nonnull final CellBinder cellBinder)
       {
         super(executor);
         this.cellBinder = cellBinder;
@@ -108,9 +102,9 @@ public class ComboBoxBindings extends DelegateSupport
      * {@inheritDoc}
      *
      ******************************************************************************************************************/
-    public void bind (final @Nonnull ComboBox<PresentationModel> comboBox,
-                      final @Nonnull PresentationModel pm,
-                      final @Nonnull Optional<Runnable> callback)
+    public void bind (@Nonnull final ComboBox<PresentationModel> comboBox,
+                      @Nonnull final PresentationModel pm,
+                      @Nonnull final Optional<Runnable> callback)
       {
         comboBox.setCellFactory(cellFactory);
         comboBox.setButtonCell(new AsObjectListCell<>(cellBinder));
@@ -120,9 +114,9 @@ public class ComboBoxBindings extends DelegateSupport
 
         // FIXME: this won't work with any external navigation system, such as CEC menus
         // TODO: try by having CEC selection emulating RETURN and optionally accepting RETURN here
-        comboBox.setOnKeyPressed((KeyEvent event) ->
+        comboBox.setOnKeyPressed(event ->
           {
-            if (Arrays.asList(SPACE, ENTER).contains(event.getCode()))
+            if (List.of(SPACE, ENTER).contains(event.getCode()))
               {
                 comboBox.show();
               }
